[workspace]
resolver = "2"
members = ["examples/tiger", "examples/util"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/vello_svg"

[workspace.dependencies]
# NOTE: Make sure to keep this in sync with the version badge in README.md
vello = "0.1.0"

[package]
name = "vello_svg"
description = "An SVG integration for vello."
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics", "vello", "svg"]
version.workspace = true
license = "(Apache-2.0 OR MIT) AND MPL-2.0"
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vello = { workspace = true }
usvg = "0.41.0"
image = { version = "0.25.0", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
] }
