[package]
name = "tiger"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
vello = { workspace = true }
vello_svg = { path = "../.." }
