[package]
name = "util"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vello = { workspace = true }
pollster = "0.3"
wgpu = "0.19.3"
winit = "0.29.12"
anyhow = "1.0.81"
